--- a/Navbar/Clints/Clint.html
+++ b/Navbar/Clints/Clint.html
@@ -24,7 +24,7 @@
     <div class="carousel">
 
         <div class="list">
-            <div class="item" style="background-image: url(/Clintsimgs/Kuwait2.png);">
+            <div class="item" style="background-image: url(../../Clintsimgs/Kuwait2.png);">
                 <div class="content">
                  <div class="title">Kuwait Consulate</div>
                     <div class="name">Provide High-Performing Security</div>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Clintsimgs/Kuwait2.png);">
+            <div class="item" style="background-image: url(../../Clintsimgs/Kuwait2.png);">
                 <div class="content">
                  <div class="title">Kuwait Consulate</div>
                     <div class="name">Provide High-Performing Security</div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Clintsimgs/Omaan.jpg);">
+            <div class="item" style="background-image: url(../../Clintsimgs/Omaan.jpg);">
                 <div class="content">
                     <div class="title">Omaan Consulate</div>
                     <div class="name">Provide High-Performing Security</div>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Clintsimgs/Liberty3.png);">
+            <div class="item" style="background-image: url(../../Clintsimgs/Liberty3.png);">
                 <div class="content">
                     <div class="title">Liberty Mills Limited</div>
                     <div class="name">Provide High-Performing Security</div>
