--- a/Navbar/Contact/Contact.html
+++ b/Navbar/Contact/Contact.html
@@ -9,13 +9,13 @@
 <body>
 <div class="container">
     <div class="left-panel">
-      <a href="index.html">
-        <img src="/image/MeerLOGO.png" class="logo" alt="Logo" />
+      <a href="../../index.html">
+        <img src="../../image/MeerLOGO.png" class="logo" alt="Logo" />
       </a>
       <h2>Contact Us</h2>
 
 <div class="contact-box" onclick="openGmailCompose()">
-  <img src="/image/gmail.png" alt="Gmail Icon" />
+  <img src="../../image/gmail.png" alt="Gmail Icon" />
   <span>Gmail</span>
 </div>
 <div  class="contact-box" onclick="window.location.href='mailto:arnstormbreaker@gmail.com'">
@@ -53,7 +53,7 @@
 
 
       <div class="contact-box"  onclick="openWhatsAppChat()">
-        <img src="/././Clintsimgs/MuhammadBux.png" alt="Manzoor Hussain" />
+        <img src="../../Clintsimgs/MuhammadBux.png" alt="Manzoor Hussain" />
         <div>
           <strong>Muhammad Bukhsh</strong><br />
           <small>Operation Manager</small>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="contact-box"  onclick="openWhatsAppChat1()">
-        <img src="/././Clintsimgs/Manzoor.png" alt="Manzoor Hussain" />
+        <img src="../../Clintsimgs/Manzoor.png" alt="Manzoor Hussain" />
         <div>
           <strong>Manzoor Hussain</strong><br />
           <small>Operation Supervisor</small>
