--- a/Navbar/Vacencies/BG.html
+++ b/Navbar/Vacencies/BG.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Body Guard Registration</title>
-  <link rel="stylesheet" href="/Navbar/Vacencies/Guard.css">
-  <link rel="stylesheet" href="/Navbar/navbar.css">
-  <link rel="stylesheet" href="/Searcch.Css">
+  <link rel="stylesheet" href="../Vacencies/Guard.css">
+  <link rel="stylesheet" href="../../Css/navbar.css">
+  <link rel="stylesheet" href="../../Css/Searcch.Css">
   
 
 </head>
 <body>    
-  <a href="/index.html" class="logo-link">
-  <img src="/image/MeerLOGO.png" alt="Logo" class="logo-img">
+  <a href="../../index.html" class="logo-link">
+  <img src="../../image/MeerLOGO.png" alt="Logo" class="logo-img">
 </a>
     <!-- <div class="form" id="Data"> -->
         <div class="Apply-Form">
@@ -93,7 +93,7 @@
     <button id="updateBtn">Update</button>
     <button id="deleteBtn">Delete</button> -->
   </div>
-
+<script  src="../../Navbar/navbar.js"></script>
   <script type="module" src="./BG.js"></script>
 </body>
 </html>
