--- a/Navbar/Vacencies/G2.html
+++ b/Navbar/Vacencies/G2.html
@@ -21,6 +21,6 @@
     </div>
     <div id="resContainer5"></div>
     
-    <script type="module" src="Guard.js"></script>
+    <script type="module" src="./Guard.js"></script>
 </body>
 </html>
