--- a/Navbar/Vacencies/Guard.html
+++ b/Navbar/Vacencies/Guard.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobs</title>
-    <link rel="stylesheet" href="/Navbar/Vacencies/Guard.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
-    <link rel="stylesheet" href="/Searcch.Css">
-
+  <link rel="stylesheet" href="../Vacencies/Guard.css">
+  <link rel="stylesheet" href="../../Css/navbar.css">
+  <link rel="stylesheet" href="../../Css/Searcch.Css">
 </head>
 <body>
-    <a href="/index.html" class="logo-link">
-  <img src="/image/MeerLOGO.png" alt="Logo" class="logo-img">
+    <a href="../../index.html" class="logo-link">
+  <img src="../../image/MeerLOGO.png" alt="Logo" class="logo-img">
 </a>
 
     <!-- <div class="form" id="Data"> -->
@@ -97,7 +96,7 @@
   </div>
 
 
-<script  src="/Navbar/navbar.js"></script>
+<script  src="../../Navbar/navbar.js"></script>
   <script type="module" src="./Guard.js"></script>
 </body>
 </html>
