--- a/Navbar/Vacencies/H.html
+++ b/Navbar/Vacencies/H.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobs</title>
-    <link rel="stylesheet" href="/Navbar/Vacencies/HRM.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
-    <link rel="stylesheet" href="/Searcch.Css">
+  <link rel="stylesheet" href="../Vacencies/HRM.css">
+  <link rel="stylesheet" href="../../Css/navbar.css">
+  <link rel="stylesheet" href="../../Css/Searcch.Css">
 
 </head>
 <body>
