--- a/Navbar/Vacencies/HRM.html
+++ b/Navbar/Vacencies/HRM.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HR Man Registration</title>
-    <link rel="stylesheet" href="/Navbar/Vacencies/HRM.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
-    <link rel="stylesheet" href="/Searcch.Css">
+  <link rel="stylesheet" href="../Vacencies/HRM.css">
+  <link rel="stylesheet" href="../../Css/navbar.css">
+  <link rel="stylesheet" href="../../Css/Searcch.Css">
 
 </head>
 <body>
-       <a href="/index.html" class="logo-link">
-  <img src="/image/MeerLOGO.png" alt="Logo" class="logo-img">
+       <a href="../../index.html" class="logo-link">
+  <img src="../../image/MeerLOGO.png" alt="Logo" class="logo-img">
 </a>
     <!-- <div class="form" id="Data"> -->
         <div class="Apply-Form">
@@ -142,7 +142,7 @@
   </div>
 
 
-<script  src="/Navbar/navbar.js"></script>
+<script  src="../../Navbar/navbar.js"></script>
   <script type="module" src="./HR.js"></script>
 </body>
 </html>
