--- a/Properties/MD.html
+++ b/Properties/MD.html
@@ -7,7 +7,7 @@
 
   <!-- AOS Animation -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/Css/MD.css" />
+  <link rel="stylesheet" href="../Css/MD.css" />
 </head>
 <body>
   <div class="meer-md-portfolio">
@@ -15,7 +15,7 @@
     <!-- Hero Section -->
     <section class="meer-md-hero" data-aos="fade-down">
       <div class="meer-md-content">
-        <img src="/Cimg/MerrHamaza.png" alt="Mr. Meer Hamzah - MD" class="meer-md-photo" />
+        <img src="../Cimg/MerrHamaza.png" alt="Mr. Meer Hamzah - MD" class="meer-md-photo" />
         <div>
           <h1 class="meer-md-name">Mr. Syed Hamzah Meer</h1>
           <p class="meer-md-title">Managing Director - Meer Security</p>
