--- a/Navbar/Services/Booking/GuardBook.html
+++ b/Navbar/Services/Booking/GuardBook.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Form</title>
-    <link rel="stylesheet" href="Askari.css">
-    <link rel="stylesheet" href="/Navbar/Services/Booking/GuardBook.css">
+    <link rel="stylesheet" href="../../Services/Booking/Askari.css">
+    <link rel="stylesheet" href="../Services/Booking/GuardBook.css">
 </head>
 <body>
      <div class="homs">
-        <a href="/index.html">
+        <a href="../../../index.html">
             <button class="button" onclick="selectButton(this)">
-                <img class="icon" src="/image/MeerLOGO.png" alt="Home">
+                <img class="icon" src="../../../image/MeerLOGO.png" alt="Home">
             </button>
         </a>
     </div>
@@ -434,11 +434,11 @@
                 </div>
         </div>
     </div>
-    <script type="module" src="/Navbar/Services/Booking/Booking01.js"></script>
-    <script type="module" src="/Navbar/Services/Booking/Booking02.js"></script>
-    <script type="module" src="/Navbar/Services/Booking/Booking03.js"></script>
-    <script type="module" src="/Navbar/Services/Booking/Booking04.js"></script>
-    <script src="Askari.js"></script>
+    <script type="module" src="../../Services/Booking/Booking01.js"></script>
+    <script type="module" src="../../Services/Booking/Booking02.js"></script>
+    <script type="module" src="../../Services/Booking/Booking03.js"></script>
+    <script type="module" src="../../Services/Booking/Booking04.js"></script>
+    <script src="../../Services/Booking/Askari.js"></script>
 </body>
 </html>
 <!-- id="resContainer" 
