--- a/Properties/Founder.html
+++ b/Properties/Founder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css/Founder.css">
+    <link rel="stylesheet" href="../css/Founder.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,13 +22,13 @@
             <div class="meer-founder-slideshow">
               <div class="meer-slide-container">
                 <div class="meer-slide">
-                  <img src="/Cimg/meerm.png" alt="Founder Image 1" class="meer-slide-img">
+                  <img src="../Cimg/meerm.png" alt="Founder Image 1" class="meer-slide-img">
                 </div>
                 <div class="meer-slide">
-                  <img src="/Cimg/meerm2.png" alt="Founder Image 2" class="meer-slide-img">
+                  <img src="../Cimg/meerm2.png" alt="Founder Image 2" class="meer-slide-img">
                 </div>
                 <div class="meer-slide">
-                  <img src="/Cimg/meerm3.png" alt="Founder Image 3" class="meer-slide-img">
+                  <img src="../Cimg/meerm3.png" alt="Founder Image 3" class="meer-slide-img">
                 </div>
               </div>
             </div>
