--- a/Properties/Location.html
+++ b/Properties/Location.html
@@ -265,8 +265,8 @@
 </head>
 <body>
 
-  <a href="/index.html">
-    <img class="maplogo" src="/image/MeerLOGO.png" alt="Company Logo">
+  <a href="../index.html">
+    <img class="maplogo" src="../image/MeerLOGO.png" alt="Company Logo">
   </a>
 
   <div class="main-layout">
