--- a/Properties/Performance.html
+++ b/Properties/Performance.html
@@ -87,7 +87,7 @@
   <div class="slide-wrapper">
     <div class="slides" id="slideContainer">
       
-      <section class="slide" style="background-image: url('/Cimg/security02.jpg');">
+      <section class="slide" style="background-image: url('../Cimg/security02.jpg');">
         <div class="overlay"></div>
         <div class="content">
           <h1>Excellence in Every Operation</h1>
@@ -95,7 +95,7 @@
         </div>
       </section>
 
-      <section class="slide" style="background-image: url('/Cimg/2.png');">
+      <section class="slide" style="background-image: url('../Cimg/2.png');">
         <div class="overlay"></div>
         <div class="content">
           <h1>Trained to Protect,Ready to Serve</h1>
@@ -103,7 +103,7 @@
         </div>
       </section>
 
-      <section class="slide" style="background-image: url('/Cimg/2.jpg');">
+      <section class="slide" style="background-image: url('../Cimg/2.jpg');">
         <div class="overlay"></div>
         <div class="content">
           <h1>Trusted by Clients, Proven by Action</h1>
