--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="navbar">
       <i class='bx bx-menu'></i>
           <div class="lgoimg"> <img src="./image/MeerLOGO.png" alt="logo" srcset=""></div>
-      <div class="logo"><a href="./index.html">Meer Security</a></div>
+      <div class="logo"><a href="index.html">Meer Security</a></div>
       <div class="nav-links">
         <div class="sidebar-logo">
           <span class="logo-name">CodingLab</span>
