--- a/Navbar/Vacencies/Account.html
+++ b/Navbar/Vacencies/Account.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Accounted Registration</title>
-      <link rel="stylesheet" href="../Vacencies/Account.css">
+      <link rel="stylesheet" href="../Vacencies/HRM.css">
       <link rel="stylesheet" href="../../Css/navbar.css">
       <link rel="stylesheet" href="../../Css/Searcch.Css">
   
