--- a/Properties/Location.html
+++ b/Properties/Location.html
@@ -285,7 +285,7 @@
     </div>
 <!-- https://maps.google.com/?q=Meer+Security+Guard+Company+Pvt+Ltd -->
     <div class="map-section">
-      <img src="/icons/ChatGPT Image Apr 11, 2025, 04_49_08 PM.png" alt="Pakistan Map" />
+      <img src="../icons/ChatGPT Image Apr 11, 2025, 04_49_08 PM.png" alt="Pakistan Map" />
       <div class="location pak">Pakistan</div>
       <div class="location sin">Sindh</div>
       <div class="location pun">Punjab</div>
