--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     <!-- Header Image -->
      <a href="./Navbar/Services/Allservices15.html">
     <div class="services-header">
-        <img src="/icons/service (2).png" alt="Our Services">
+        <img src="./icons/service (2).png" alt="Our Services">
         </a>
     </div>
 
@@ -812,16 +812,16 @@
       </div>
 
     
-      <script>
+      <!-- <script>
   AOS.init({
     duration: 800,
     offset: 120,
     easing: 'ease-in-out',
     once: true
   });
-</script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script> 
+</script> -->
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>  -->
 
 <!-- AOS JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
