--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
 
       <script type="module" src="./Js/AllServices.js"></script>
       <script type="module" src="./Js/Headline.js"></script>
-  <script src="./js/Slides.js" defer></script>
+  <!-- <script src="./Js/Slides.js" defer></script> -->
   <script src="./Js/google.js" defer></script>
 <script type="module" src="./Js/Slider.js"></script>
 <script type="module" src="./Js/Count.js"></script>
