--- a/index.html
+++ b/index.html
@@ -820,10 +820,10 @@
     once: true
   });
 </script> -->
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>  -->
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>  
-
+<!-- AOS JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
   AOS.init();
@@ -837,7 +837,7 @@
 
       <script type="module" src="./Js/AllServices.js"></script>
       <script type="module" src="./Js/Headline.js"></script>
-  <!-- <script src="./Js/Slides.js" defer></script> -->
+  <script src="./Js/Slides.js" defer></script>
   <script src="./Js/google.js" defer></script>
 <script type="module" src="./Js/Slider.js"></script>
 <script type="module" src="./Js/Count.js"></script>
