--- a/Navbar/Services/Allservices15.html
+++ b/Navbar/Services/Allservices15.html
@@ -64,7 +64,7 @@
 </div>
 
 <!-- Slide 2: Close Protect -->
-<div class="item" style="background-image: url(../../Clintsimgs/CloseProt01.jpeg);">
+<div class="item" style="background-image: url(../../Pictures/CloseProt.jpeg);">
   <div class="content">
     <div class="title">Close Protection</div>
     <div class="name">Discreet VIP & Executive Security</div>
