--- a/Navbar/Services/GPS-Tracking.html
+++ b/Navbar/Services/GPS-Tracking.html
@@ -34,7 +34,7 @@
         <div class="list">
 
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(../..../../Clintsimgs/GPS04.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/GPS04.jpeg);">
         <div class="content">
             <div class="title">Emergency Response</div>
             <div class="name">Fast & Accurate Assistance</div>
@@ -47,7 +47,7 @@
     </div>
 
  <!-- Slide 1 -->
-    <div class="item" style="background-image: url(../..../../Clintsimgs/GPS01.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/GPS01.jpeg);">
         <div class="content">
             <div class="title">GPS Tracking</div>
             <div class="name">Real-Time Vehicle Monitoring</div>
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(../../Clintsimgs/GPS02.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Control-Integration.png.jpeg);">
         <div class="content">
             <div class="title">Fleet Management</div>
             <div class="name">Efficiency & Optimization</div>
