--- a/Navbar/Services/Guard-Ser.html
+++ b/Navbar/Services/Guard-Ser.html
@@ -33,7 +33,7 @@
 
         <div class="list">
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(../../clint/Supervisor.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Supervisor.jpeg);">
         <div class="content">
             <div class="title">Security Supervisors</div>
             <div class="name">Smart Monitoring</div>
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(../../Ex-Armed-Forces.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Ex-Armed-Forces.jpeg);">
         <div class="content">
             <div class="title">Ex-Armed Forces</div>
             <div class="name">Elite Trained Guards</div>
@@ -84,7 +84,7 @@
     </div>
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(../../Clintsimgs../SSW.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/SSW.jpeg);">
         <div class="content">
             <div class="title">SSW Guards</div>
             <div class="name">Advanced Tactical Team</div>
