--- a/Navbar/Services/Boody-G.html
+++ b/Navbar/Services/Boody-G.html
@@ -47,7 +47,7 @@
 </div>-->
 
 <!-- Slide 3 -->
-<div class="item" style="background-image: url(../../Clintsimgs/BodyGuard03.jpeg)">
+<div class="item" style="background-image: url(../../Pictures/Bouncer.jpeg)">
   <div class="content">
     <div class="title">Body Guard</div>
     <div class="name">Travel Escort</div>
@@ -74,7 +74,7 @@
 </div>
 
 <!-- Slide 2 -->
-<div class="item" style="background-image: url(../../Clintsimgs/BodyGuard02.jpeg);">
+<div class="item" style="background-image: url(../../Pictures/BodyGuard02.jpeg);">
   <div class="content">
     <div class="title">Body Guard</div>
     <div class="name">Threat Assessment</div>
