--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
+  <video src=""></video>
   <nav>
     <div class="navbar">
       <i class='bx bx-menu'></i>
@@ -29,7 +30,7 @@
       <div class="logo"><a href="index.html">Meer Security</a></div>
       <div class="nav-links">
         <div class="sidebar-logo">
-          <span class="logo-name">CodingLab</span>
+          <span class="logo-name">Meer Security Services</span>
           <i class='bx bx-x' ></i>
         </div>
         <ul class="links">
@@ -146,12 +147,18 @@
     <div id="authProgress" class="auth-progress" aria-hidden="true"></div>
   </div>
 </div>
-
-<video autoplay muted loop class="video-background">
-  <source src="./Cimg/garda-security-usa-ambient.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-   <button type="button">Location</button>
+<!-- Desktop Video -->
+<video autoplay muted loop playsinline preload="auto" class="video-background desktop-video">
+    <source src="./Cimg/garda-security-usa-ambient.mp4" type="video/mp4">
+    Your browser does not support the video tag.
 </video>
+
+<!-- Mobile Video -->
+<video autoplay muted loop playsinline preload="auto" class="video-background mobile-video">
+    <source src="./icons/video.mp4.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
 
 <div class="content">
 </div>
