--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <!-- !-- Inside your navbar -->
 <div id="user-info" class="user-info">
     <img id="user-profile-img" class="user-profile-img" src="" alt="Profile" style="display:none;">
-    <span id="user-gmail" class="user-gmail"></span>
+    <span  class="user-gmail" ></span>
 </div>
 
 <!-- Custom Google-style Sign-in Modal -->
